fix timer style on firefox

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -38,6 +38,10 @@ h1 {
     clear: both;
   }
 
+  label {
+    width: 100%;
+  }
+
   input {
     width: 50%;
   }
